added basic HTML page structure. Added the layout reference image as background-image.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
   /*  -- Remove for prod -- */
-  background-image: url("../Modelo\ maqueta\ -\ integrador\ front.jpg");
+  background-image: url("../layout_reference.jpg");
   background-size: 100vw;
   /* -- -- */
 }
