--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,27 +1,36 @@
+:root {
+  --header-height: 84px;
+  --footer-height: 84px;
+  --theme-grey: #353a40;
+  --theme-green: #29a744;
+  --theme-yellow: 
+}
+
 body {
-  /*  -- Remove for production -- */
+  /*  -- Remove for production ↓↓ -- */
   background-image: url("../layout_reference.jpg");
   background-size: 100vw;
-  /* -- Remove for production -- */
+  /* -- Remove for production ↑↑ -- */
 
   margin: 0;
   font-family: "Inter", sans-serif;
 }
 
-/* ---- HEADER ----*/
+/* ---- HEADER ↓↓ ----*/
 #main-header {
   align-items: center;
   background-color: #353a40;
   display: flex;
-  height: 115px;
+  height: var(--header-height);
   justify-content: space-between;
-  padding: 0px 9rem 0 8.4rem; /* left padding adjusted to accomodate the logo */
+  padding: 0px 6.5rem 0 6rem;; /* left padding adjusted to accomodate the logo */
+  position: sticky;
 }
 
 .header-links {
   color: white;
   cursor: pointer;
-  font-size: 1.4rem;
+  font-size: 1rem;
   text-decoration: none;
 }
 
@@ -33,21 +42,32 @@ body {
 }
 
 #header-logo span {
-  font-size: 1.8rem;
+  font-size: 1.3rem;
   padding-bottom: 12px;
 }
 
 #header-logo img {
-  height: 86px;
+  height: 62px;
 }
 
 #header-navbar {
   display: flex;
-  gap: 24px;
-  padding-bottom: 5px;
+  gap: 19px;
+  padding-bottom: 7px;
 }
 
 #header-navbar a:last-child {
   color: green;
-  font-size: 1.5rem;
 }
+/* ---- HEADER ↑↑ ----*/
+
+/* ---- MAIN ↓↓ ----*/
+main section {
+  height: calc(100vh - var(--header-height));
+}
+
+#hero-section {
+  background-color: #ff000045;
+  height: calc(100vh - var(--header-height));
+}
+/* ---- MAIN ↑↑ ----*/
