--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@
   padding: 0;
 }
 
+/* ---- GENERAL ---- */
 body {
   /*  -- Remove for production ↓↓ -- */
   background-image: url("../layout_reference.jpg");
@@ -26,7 +27,24 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-/* ---- HEADER ↓↓ ----*/
+button {
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid white;
+  color: white;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: inherit;
+  padding: 0.6rem 0.8rem;
+}
+
+/* ---- UTILITIES ---- */
+.btn-green {
+  background-color: var(--theme-green-m);
+  border-color: var(--theme-green-m);
+}
+
+/* ---- HEADER ↓↓ ---- */
 #main-header {
   align-items: center;
   background-color: #353a40;
@@ -72,10 +90,41 @@ body {
 /* ---- HEADER ↑↑ ----*/
 
 /* ---- MAIN ↓↓ ----*/
+/* -- HERO ↓↓ --*/
 #hero-section {
+  align-items: center;
   background-color: #ff000045;
+  color: white;
+  display: flex;
+  flex-direction: row-reverse;
   height: calc(100vh - var(--header-height));
+  padding: 0rem 7rem 0 6rem;
 }
+
+#hero-section article {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  line-height: 26px;
+  padding-top: 6rem; /* verify the position of the article at the end of the layout process */
+  text-align: right;
+  width: 50%;
+}
+
+#hero-section h2 {
+  font-size: 2rem;
+}
+
+#hero-section nav {
+  display: flex;
+  gap: 1rem;
+  justify-content: end;
+}
+
+#hero-carousel {
+  display: none; /* TO DO: set carousel with Bootstrap */
+}
+/* -- HERO ↑↑ --*/
 
 #oradores-section {
   background-color: #00ffbf45;
