--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Inter", sans-serif !important;
 }
 
 /* ---- GENERAL ---- */
@@ -22,9 +23,6 @@ body {
   background-image: url("../layout_reference.jpg");
   background-size: calc(100vw - 18px);
   /* -- Remove for production ↑↑ -- */
-
-  margin: 0;
-  font-family: "Inter", sans-serif;
 }
 
 button {
@@ -33,9 +31,8 @@ button {
   border: 1px solid white;
   color: white;
   cursor: pointer;
-  font-family: inherit;
   font-size: inherit;
-  padding: 0.6rem 0.8rem;
+  padding: 0.45rem 0.8rem;
 }
 
 /* ---- UTILITIES ---- */
@@ -85,7 +82,8 @@ button {
 }
 
 #header-navbar a:last-child {
-  color: green;
+  color: var(--theme-green-m);
+  font-weight: bold;
 }
 /* ---- HEADER ↑↑ ----*/
 
@@ -93,26 +91,27 @@ button {
 /* -- HERO ↓↓ --*/
 #hero-section {
   align-items: center;
-  background-color: #ff000045;
   color: white;
   display: flex;
   flex-direction: row-reverse;
   height: calc(100vh - var(--header-height));
   padding: 0rem 7rem 0 6rem;
+  position: relative;
 }
 
 #hero-section article {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   line-height: 26px;
-  padding-top: 6rem; /* verify the position of the article at the end of the layout process */
+  padding-top: 5.5rem;
   text-align: right;
   width: 50%;
+  z-index: 2;
 }
 
 #hero-section h2 {
   font-size: 2rem;
+  font-weight: bold;
 }
 
 #hero-section nav {
@@ -122,7 +121,17 @@ button {
 }
 
 #hero-carousel {
-  display: none; /* TO DO: set carousel with Bootstrap */
+  align-items: center;
+  background-color: var(--theme-blue-d);
+  display: flex;
+  filter: brightness(0.45);
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 /* -- HERO ↑↑ --*/
 
