--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,6 +35,24 @@ button {
   padding: 0.45rem 0.8rem;
 }
 
+.section-title {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding: 0.8rem;
+  text-transform: uppercase;
+}
+
+.section-title span {
+  font-size: 0.7rem;
+}
+
+.section-title h2 {
+  font-size: 1.8rem;
+  font-weight: bold;
+  margin: 0;
+}
+
 /* ---- UTILITIES ---- */
 .btn-green {
   background-color: var(--theme-green-m);
@@ -165,24 +183,6 @@ button {
   padding: 0 12rem;
 }
 
-#cards-section-title {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  padding: 0.5rem;
-  text-transform: uppercase;
-}
-
-#cards-section-title span {
-  font-size: 0.75rem;
-}
-
-#cards-section-title h2 {
-  font-size: 2rem;
-  font-weight: bold;
-  margin: 0;
-}
-
 .card {
   background-color: transparent;
   border: none;
@@ -255,8 +255,63 @@ button {
 /* -- DESTINO ↑↑ -- */
 
 #form-section {
-  background-color: #00ff2a45;
-  height: 100vh; /* cambiar para que se ajuste a contentido luego*/
+  align-items: center;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 1rem;
+  padding-top: 0.5rem;
+}
+
+#form-section p {
+  font-size: 0.85rem;
+  margin-bottom: 0.5rem;
+}
+
+#form-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 660px;
+  width: 100%;
+}
+
+#form-personal-input {
+  display: flex;
+  gap: 1.5rem;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+#form-personal-input label {
+  width: 50%;
+}
+
+#form-container span {
+  color: gray;
+  font-size: 0.75rem;
+}
+
+input, textarea {
+  border: 1px solid lightgray;
+  border-radius: 4px;
+  font-size: 0.8rem;
+  padding: 3px 7px;
+  width: 100%;
+}
+
+textarea {
+  font-size: 1.1rem;
+  padding: 8px 15px;
+}
+
+#btn-submit {
+  padding: 0.5rem;
+  background-color: var(--theme-green-l);
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  margin-top: 1rem;
 }
 /* ---- MAIN ↑↑ ----*/
 
