Added header navbar responsive design: added dropdown implementation with Bootstrap. Ajusted carousel's slides width behavior

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,12 +18,10 @@
 }
 
 /* ---- GENERAL ---- */
-body {
-  /*  -- Remove for production ↓↓ -- */
+/* body {
   background-image: url("../layout_reference.jpg");
   background-size: calc(100vw - 18px);
-  /* -- Remove for production ↑↑ -- */
-}
+} */
 
 button {
   background-color: transparent;
@@ -85,6 +83,7 @@ button {
   justify-content: space-between;
   padding: 0px 6.5rem 0 6rem; /* left padding adjusted to accomodate the logo */
   position: sticky;
+  z-index: 3;
 }
 
 .header-links {
@@ -120,16 +119,76 @@ button {
   color: var(--theme-green-m);
   font-weight: bold;
 }
-/* ---- HEADER ↑↑ ----*/
 
-/* ---- MAIN ↓↓ ----*/
-/* -- HERO ↓↓ --*/
+#header-dropdown {
+  display: none;
+}
+
+#dropdown-button {
+  background-color: var(--theme-grey);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  fill: white;
+  height: 48px;
+  padding: 0.5rem;
+  position: relative;
+  width: 48px;
+}
+#dropdown-button > #xmark-icon {
+  bottom: 0;
+  display: none;
+  position: absolute;
+  right: 9px;
+  top: 5px;
+  width: 60%;
+}
+
+#dropdown-button.show {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+#dropdown-button.show > #menu-icon {
+  display: none;
+}
+#dropdown-button.show > #xmark-icon {
+  display: block;
+}
+
+#dropdown-button:hover {
+  background-color: rgba(255, 255, 255, 0.15);
+}
+#dropdown-button::after {
+  display: none;
+}
+
+#dropdown-navbar {
+  background-color: var(--theme-grey);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  width: 15rem;
+}
+
+#dropdown-navbar a:last-child {
+  color: var(--theme-green-m);
+  font-weight: bold;
+}
+
+.dropdown-item { /* overwrites the Bootstrap class */
+  padding: 1rem;
+}
+.dropdown-item:hover { /* overwrites the Bootstrap class */
+  background-color: rgba(255, 255, 255, 0.15);
+  color: white;
+}
+
+/* ---- HEADER ↑↑ ---- */
+
+/* ---- MAIN ↓↓ ---- */
+/* -- HERO ↓↓ -- */
 #hero-section {
   align-items: center;
   color: white;
   display: flex;
   flex-direction: row-reverse;
   height: calc(100vh - var(--header-height));
+  overflow: hidden;
   padding: 0rem 7rem 0 6rem;
   position: relative;
 }
@@ -140,7 +199,7 @@ button {
   line-height: 26px;
   padding-top: 5.5rem;
   text-align: right;
-  width: 50%;
+  max-width: 580px;
   z-index: 2;
 }
 
@@ -160,7 +219,7 @@ button {
   background-color: var(--theme-blue-d);
   display: flex;
   filter: brightness(0.45);
-  height: 100%;
+  /* height: 100%; */
   overflow: hidden;
   position: absolute;
   right: 0;
@@ -168,9 +227,8 @@ button {
   width: 100%;
   z-index: 1;
 }
-/* -- HERO ↑↑ --*/
-
-/* -- ORADORES ↓↓ --*/
+/* -- HERO ↑↑ -- */
+/* -- ORADORES ↓↓ -- */
 #cards-section {
   background-color: rgb(255, 255, 255);
   height: 100vh; /* cambiar para que se ajuste a contentido luego*/
@@ -186,6 +244,7 @@ button {
 .card {
   background-color: transparent;
   border: none;
+  max-width: 400px;
 }
 
 .card-image {
@@ -216,8 +275,7 @@ button {
   font-size: 0.75rem;
   line-height: 22px;
 }
-/* -- ORADORES ↑↑ --*/
-
+/* -- ORADORES ↑↑ -- */
 /* -- DESTINO ↓↓ -- */
 #destinos-section {
   background-color: var(--theme-grey);
@@ -253,7 +311,7 @@ button {
   width: 100%;
 }
 /* -- DESTINO ↑↑ -- */
-
+/* -- FORM ↓↓ -- */
 #form-section {
   align-items: center;
   background-color: white;
@@ -305,17 +363,18 @@ textarea {
 }
 
 #btn-submit {
-  padding: 0.5rem;
   background-color: var(--theme-green-l);
-  color: white;
-  border: none;
   border-radius: 4px;
+  border: none;
+  color: white;
   font-size: 1rem;
   margin-top: 1rem;
+  padding: 0.5rem;
 }
-/* ---- MAIN ↑↑ ----*/
+/* -- FORM ↑↑ -- */
+/* ---- MAIN ↑↑ ---- */
 
-/* ---- FOOTER ↓↓ ----*/
+/* ---- FOOTER ↓↓ ---- */
 footer {
   background: rgb(27,53,66);
   background: linear-gradient(90deg, rgba(27,53,66,1) 0%, rgba(28,81,112,1) 100%); 
@@ -336,9 +395,22 @@ footer {
   font-size: 0.84rem;
   justify-content: center;
   line-height: 1.4rem;
+  margin: auto;
   max-width: 80px;
   padding: 1rem;
   text-align: center;
   text-decoration: none;
 }
-/* ---- FOOTER ↑↑ ----*/
+/* ---- FOOTER ↑↑ ---- */
+
+/* ---- MEDIA-QUERIES ↓↓ ---- */
+@media (max-width: 1184px) {
+  #header-navbar {
+    display: none;
+  }
+
+  #header-dropdown {
+    display: block;
+  }
+}
+/* ---- MEDIA-QUERIES ↑↑ ---- */
