Fixed Footer and Card display on mobile resolutions. Prettified code using Prettier Airbnb Standard.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Inter", sans-serif !important;
+  font-family: 'Inter', sans-serif !important;
 }
 
 /* ---- GENERAL ---- */
@@ -208,10 +208,12 @@ button {
   font-weight: bold;
 }
 
-.dropdown-item { /* overwrites the Bootstrap class */
+.dropdown-item {
+  /* overwrites the Bootstrap class */
   padding: 1rem;
 }
-.dropdown-item:hover { /* overwrites the Bootstrap class */
+.dropdown-item:hover {
+  /* overwrites the Bootstrap class */
   background-color: rgba(255, 255, 255, 0.15);
   color: white;
 }
@@ -225,9 +227,10 @@ button {
   color: white;
   display: flex;
   flex-direction: row-reverse;
-  height: calc(100vh - var(--header-height));
+  height: auto;
+  min-height: calc(100vh - var(--header-height));
   overflow: hidden;
-  padding: 0rem 7rem 0 6rem;
+  padding: 2rem 7rem;
   position: relative;
 }
 
@@ -270,18 +273,32 @@ button {
   display: flex;
   align-items: center;
 }
+
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+  /* height: 100%; */
+}
+
+.carousel-image {
+  width: 100%;
+}
 /* -- HERO ↑↑ -- */
 /* -- ORADORES ↓↓ -- */
 #cards-section {
   background-color: white;
-  height: 100vh; /* cambiar para que se ajuste a contentido luego*/
+  height: auto;
+  min-height: 100vh;
 }
 
 #cards-container {
   display: grid;
   gap: 2rem;
   grid-template-columns: 1fr 1fr 1fr;
-  padding: 0 12rem;
+  padding: 0 2rem;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .card {
@@ -371,12 +388,12 @@ button {
 }
 
 /* overwrites Boostrap default configuration */
-#carousel-container .carousel-inner { 
+#carousel-container .carousel-inner {
   align-items: end;
   display: flex;
 }
 /* overwrites Boostrap default configuration */
-#carousel-container .carousel-item.active { 
+#carousel-container .carousel-item.active {
   display: flex;
 }
 
@@ -421,7 +438,8 @@ button {
   font-size: 0.75rem;
 }
 
-input, textarea {
+input,
+textarea {
   border: 1px solid lightgray;
   border-radius: 4px;
   font-size: 0.8rem;
@@ -452,20 +470,30 @@ textarea {
 
 /* ---- FOOTER ↓↓ ---- */
 footer {
-  background: rgb(27,53,66);
-  background: linear-gradient(90deg, rgba(27,53,66,1) 0%, rgba(28,81,112,1) 100%); 
-  min-height: var(--footer-height);
+  background: rgb(27, 53, 66);
+  background: linear-gradient(
+    90deg,
+    rgba(27, 53, 66, 1) 0%,
+    rgba(28, 81, 112, 1) 100%
+  );
+  display: flex;
   height: auto;
+  justify-content: center;
+  align-items: center;
+  min-height: var(--footer-height);
+  padding: 0 3rem;
 }
 
 #footer-nav {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  gap: 5rem;
   height: 100%;
-  justify-content: center;
+  justify-content: space-evenly;
   min-height: var(--footer-height);
+  padding: 1rem 0;
+  width: 100%;
+  max-width: 1100px;
 }
 
 #footer-nav a {
@@ -502,6 +530,16 @@ footer {
 }
 
 @media (max-width: 960px) {
+  .carousel-item-next,
+  .carousel-item-prev,
+  .carousel-item.active {
+    height: 100%;
+  }
+  .carousel-image {
+    height: 100%;
+    width: auto;
+  }
+
   #destinos-section {
     grid-template-columns: 1fr;
   }
@@ -514,16 +552,20 @@ footer {
     padding: 3rem;
   }
   #destinos-section p {
-    margin-bottom: 1rem
+    margin-bottom: 1rem;
   }
 }
 
 /* -- TABLET DISPLAY -- */
-@media (max-width: 840px) { 
+@media (max-width: 840px) {
   #main-header {
     padding: 0 2.5rem 0 2rem;
   }
 
+  #hero-section {
+    min-height: 600px;
+    padding: 0rem 3rem;
+  }
   #hero-section article {
     padding-top: 0;
   }
@@ -533,7 +575,11 @@ footer {
   }
   #cards-container {
     grid-template-columns: 1fr 1fr;
-    padding: 3rem;
+    padding: 2rem;
+  }
+  .card-content {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   }
 
   .carousel-btn {
@@ -542,7 +588,6 @@ footer {
 
   footer {
     height: auto;
-    padding: 0 1rem;
   }
   #footer-nav {
     display: flex;
@@ -552,7 +597,7 @@ footer {
 }
 
 /* -- SMART-PHONE DISPLAY -- */
-@media (max-width: 420px) {
+@media (max-width: 480px) {
   #main-header {
     padding: 0 1.5rem 0 1rem;
   }
@@ -595,10 +640,14 @@ footer {
   #form-personal-input label {
     width: 100%;
   }
-  input, textarea {
+  input,
+  textarea {
     padding: 5px 10px;
   }
 
+  footer {
+    padding: 0 1.5rem;
+  }
   #footer-nav {
     height: auto;
     grid-template-columns: 1fr 1fr 1fr 1fr;
